# ggnpu

./: .dockerignore  .gitignore  CMakeLists.txt  IMPLEMENTATION.md  README.md  dev-benchmark.md  requirements-triton.txt  setup.sh
cmake/: FindPeano.cmake  FindXRT.cmake
docker/: .env.example  Dockerfile  Dockerfile.builder  build.sh  docker-compose.yml  entrypoint.sh  install-mlir-aie.sh  install-xrt-runtime.sh
docs/: amd-krackan.md  architecture.md  docker.md  host-setup-guide.md  intel-roadmap.md  usage.md  web-chat.md
include/ggnpu/: backend.h  bf16.h  cache.h  gguf.h  graph.h  kv_cache.h  model.h  tensor.h  tokenizer.h  weight_cache.h
include/ggnpu/quant/: iq4_nl.h  iq4_xs.h  iquants.h  kquant.h  q4_0.h  q4_1.h  q8_0.h  quant.h
kernels/amd/fused_attn/: README.md  flash_attn.mlir  flash_attn_tile.h
kernels/amd/matmul_i8/: README.md  matmul.mlir  matmul_control.h  matmul_tile.h
kernels/amd/rmsnorm/: README.md  rmsnorm.mlir  rmsnorm_control.h  rmsnorm_tile.h
kernels/amd/rope/: README.md  rope.mlir  rope_tile.h
kernels/amd/silu/: README.md  silu.mlir  silu_tile.h
kernels/amd/softmax/: README.md  softmax.mlir  softmax_tile.h
kernels/triton/: compile_kernels.py
kernels/triton/transforms/: attn_qk_aie2p.mlir  flash_attn_aie2p.mlir  matmul_bf16_aie2p.mlir  matmul_small_m_aie2p.mlir  matmul_small_m_fineN_aie2p.mlir  matmul_small_m_splitk_aie2p.mlir  rmsnorm_aie2p.mlir  rope_aie2p.mlir  silu_aie2p.mlir  softmax_aie2p.mlir
scripts/: build-kernels.sh  build.sh  chat_server.py  compare_logits.py  fetch-xrt-dev.sh  install-host.sh  setup-host.sh  setup-triton-env.sh  smoke-sweep.sh  test-e2e-logits.sh  test-gemma-e2e.sh  test-lfm2-e2e.sh  validate-bf16-matmul.py  validate-splitk-matmul.py  verify-kernel-build.sh  verify-npu.sh
src/arch/llama/: llama.cpp  tensor_map.cpp
src/backends/amd_xdna/: amd_xdna.cpp  buffer.cpp  kernels.cpp
src/backends/cpu_ref/: cpu_ref.cpp
src/cache/: cache.cpp
src/cli/: main.cpp  tokenizer.cpp  unicode-data.cpp  unicode.cpp
src/gguf/: gguf.cpp  tensor.cpp
src/graph/: graph.cpp  ops.cpp
src/quant/: iq4_nl.cpp  iq4_xs.cpp  iq_grids.inc  iquants.cpp  q2_k.cpp  q3_k.cpp  q4_0.cpp  q4_1.cpp  q4_k.cpp  q5_k.cpp  q6_k.cpp  q8_0.cpp  quant.cpp
src/runtime/: kv_cache.cpp  scheduler.cpp
src/utils/: bf16.cpp
tests/: iq_crosscheck.cpp  test_arch.cpp  test_bf16.cpp  test_gguf.cpp  test_gguf_io.cpp  test_graph.cpp  test_kv_cache.cpp  test_quant.cpp  test_tokenizer.cpp  test_weight_cache.cpp
web/: index.html
